--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header{
 
 .container{
   flex-wrap: wrap;
-  max-width: 500px;
+  max-width: 600px;
 }
 
 .box{
@@ -24,10 +24,11 @@ header{
   justify-content: center;
   align-items: center;
   color: black;
-  width: 50px;
-  height: 50px;
-  margin: 5px;
+  width: 60px;
+  height: 60px;
+  margin: 8px;
   background-color: #1489B2;
+  font-size: 0.8rem;
 }
 
 .buzz{
@@ -36,6 +37,10 @@ header{
 
 .fizz{
   background-color: #0DD6A1;
+}
+
+.fizzbuzz{
+  background-color: #F2476F;
 }
 
 .i{
