--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 /* BODY STYLE */
 body{
-  background-color: #083B4C;
+  background-color: #227C9D;
   color: white;
 }
 
@@ -15,12 +15,9 @@ body{
 header{
   max-width: 500px;
   margin: 20px auto;
-  box-shadow: #0DD6A1
-  ;
 }
 
 /* MAIN STYLE */
-
 
 .container{
   flex-wrap: wrap;
@@ -35,18 +32,18 @@ header{
   width: 60px;
   height: 60px;
   margin: 8px;
-  background-color: #1489B2;
+  background-color: #17C3B2;
   font-size: 0.8rem;
 }
 
 .buzz{
-  background-color: #FFD166;
+  background-color: #FFCB77;
 }
 
 .fizz{
-  background-color: #0DD6A1;
+  background-color: #FEF9EF;
 }
 
 .fizzbuzz{
-  background-color: #F2476F;
+  background-color: #FE6D73;
 }
